# Compiler

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: project.yml
grammar/: CMakeLists.txt  lexer.l  parser.y  tokens.hpp
inc/ast/: AST.hpp  ASTNode.hpp  ASTNodeFactory.hpp  CommandsNode.hpp  ConditionNode.hpp  DeclarationsNode.hpp  ExpressionNode.hpp  IdentifierNode.hpp  MainNode.hpp  ProceduresNode.hpp  ProgramAllNode.hpp  ValueNode.hpp
inc/codegen/: CodeGenerator.hpp  Command.hpp  InstructNodes.hpp  Instructions.hpp  Memory.hpp
inc/compiler_ifc/: CompilerInterface.hpp  Context.hpp
inc/semantic_analyzer/: ErrorMessages.hpp  SemanticAnalzyer.hpp  Symbol.hpp  SymbolTable.hpp
src/app/: main.cpp
src/ast/: ASTNode.cpp  ASTNodeFactory.cpp  CMakeLists.txt  CommandsNode.cpp  ConditionNode.cpp  DeclarationsNode.cpp  ExpressionNode.cpp  IdentifierNode.cpp  MainNode.cpp  ProceduresNode.cpp  ProgramAllNode.cpp  ValueNode.cpp
src/codegen/: CMakeLists.txt  CodeGenerator.cpp  InstructNodes.cpp  Instructions.cpp  Memory.cpp
src/compiler_ifc/: CMakeLists.txt  CompilerInterface.cpp
src/semantic_analyzer/: CMakeLists.txt  ErrorMessages.cpp  SemanticAnalyzer.cpp  Symbol.cpp  SymbolTable.cpp
test/: start_testing.sh  test-runner.py  valgrind_test.sh
test/expected_vm_output/: example1.expected  example2.expected  example3.expected  example4.expected  example6.expected  example7.expected  exampleA.expected  program0.expected  program1.expected  program2.expected  program3.expected  test0.expected  test1.expected  test10.expected  test11.expected  test12.expected  test13.expected  test14.expected  test15.expected  test16.expected  test19.expected  test20.expected  test3.expected  test4.expected  test5.expected  test6.expected  test7.expected  test8.expected  test9.expected
test/input/: error1.imp  error2.imp  error3.imp  error4.imp  error5.imp  error6.imp  error7.imp  error8.imp  example4.imp  example8.imp  exampleA.imp  test0.imp  test1.imp  test10.imp  test11.imp  test12.imp  test13.imp  test14.imp  test15.imp  test16.imp  test17.imp  test18.imp  test19.imp  test2.imp  test20.imp  test3.imp  test4.imp  test5.imp  test6.imp  test7.imp  test8.imp  test9.imp
